@@ -272,6 +272,11 @@ namespace MonoDevelop.Database.Sql
 			
 			sb.Append (" );");
 			
+			foreach (TriggerSchema trigger in table.Triggers) {
+				sb.Append (Environment.NewLine);
+				sb.Append (GetTriggerCreateStatement (trigger));				
+			}
+			
 			return sb.ToString ();
 		}
 		
@@ -328,7 +333,65 @@ namespace MonoDevelop.Database.Sql
 		//http://www.sqlite.org/lang_createtrigger.html
 		public override void CreateTrigger (TriggerSchema trigger)
 		{
-			throw new NotImplementedException ();
+			string sql = GetTriggerCreateStatement (trigger);
+			ExecuteNonQuery (sql);
+		}
+		
+		protected virtual string GetTriggerCreateStatement (TriggerSchema trigger)
+		{
+			StringBuilder sb = new StringBuilder ();
+			
+			sb.Append ("CREATE TRIGGER ");
+			sb.Append (trigger.Name);
+			
+			switch (trigger.TriggerType) {
+			case TriggerType.Before:
+				sb.Append (" BEFORE");
+				break;
+			case TriggerType.After:
+				sb.Append (" AFTER");
+				break;
+			default:
+				throw new NotImplementedException ();
+			}
+			
+			switch (trigger.TriggerEvent) {
+			case TriggerEvent.Insert:
+				sb.Append (" INSERT ");
+				break;
+			case TriggerEvent.Update:
+				sb.Append (" UPDATE ");
+				break;
+			case TriggerEvent.Delete:
+				sb.Append (" DELETE ");
+				break;
+			default:
+				throw new NotImplementedException ();
+			}
+			
+			sb.Append ("ON ");
+			sb.Append (trigger.TableName);
+			sb.Append (' ');
+			sb.Append (Environment.NewLine);
+			
+			switch (trigger.TriggerFireType) {
+			case TriggerFireType.ForEachRow:
+			case TriggerFireType.ForEachStatement:
+				sb.Append (" FOR EACH ROW ");
+				break;
+			default:
+				throw new NotImplementedException ();
+			}
+			
+			sb.Append (Environment.NewLine);
+			sb.Append ("BEGIN ");
+			sb.Append (Environment.NewLine);
+			sb.Append (trigger.Source);
+			sb.Append (' ');
+			sb.Append (Environment.NewLine);
+			sb.Append ("END;");
+			
+			return sb.ToString ();
 		}
 
 		//http://www.sqlite.org/lang_altertable.html
